update multi theme

--- a/site/views/components/base.pug
+++ b/site/views/components/base.pug
@@ -17,7 +17,7 @@ block contents
                         .ga-tag.label.primary
                             i.icon.left.xi-at
                             | Font Family
-                        span.bold.large  Pretendard Variable(CDN)
+                        span.bold.large  
                         .contents-wrapper.pretendard
                             .ga-grid
                                 .column.span-3.span-xs-12.mainWord AaBb
@@ -26,7 +26,7 @@ block contents
                                     p ABCDEFGHIJKLMNOPQRSTUVWXYZ
                                     p abcdefghijklmnopqrstuvwxyz
                                     p 1234567890 ,./(){}[]\|:;"'?
-                                    p 가나다라마바사 프리텐다드
+                                    p 가나다라마바사
             .section-contents
                 h4 Weight
                 .ga-card
