--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -4,10 +4,6 @@ html, body {
   height: 100vh;
 }
 
-h1, h2, h3, h4 {
-  font-family: Ubuntu;
-}
-
 header.gnb {
   position: fixed;
   top: 0;
@@ -44,6 +40,35 @@ header.gnb .logo span {
 header.gnb .logo .sub-logo {
   font-size: 0.8em;
   opacity: 0.8;
+}
+
+h1 {
+  font-family: Ubuntu;
+}
+
+.error-container {
+  width: 100%;
+  height: 100%;
+  background-color: #5178af;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.error-container .error-wrapper {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* max-width: 1024px; */
+  /* margin: 0 auto; */
+  text-align: center;
+}
+.error-container .status {
+  font-size: 25em;
+}
+.error-container .message {
+  font-size: 8em;
 }
 
 .main-menu, .sub-menu {
@@ -112,10 +137,11 @@ header.gnb .logo .sub-logo {
 .main-banner {
   text-align: center;
   height: 450px;
+  padding: 12rem 0;
 }
 .main-banner .title {
   font-family: Ubuntu;
-  padding: 100px 20px 10px;
+  padding: 10px 20px 10px;
   font-size: 3em;
   font-weight: 800;
 }
@@ -171,7 +197,6 @@ section .section-title h1 {
   margin-bottom: 14px;
 }
 section .section-title .section-desc p {
-  font-family: Ubuntu;
   font-weight: 300;
   color: #999;
   font-size: 1.2em;
@@ -216,6 +241,27 @@ section .section-contents .contents-wrapper .contents-item {
 }
 .summary .field {
   margin-bottom: 5px;
+}
+
+#custom-theme {
+  padding: 150px 40px;
+}
+#custom-theme .user-custom-theme h1, #custom-theme .user-custom-theme p {
+  text-align: center;
+}
+#custom-theme .select-css .option-item {
+  padding: 10px;
+}
+#custom-theme .hr {
+  margin: 10px;
+  width: 100%;
+  height: 1px;
+  background-color: #d6d6d6;
+}
+#custom-theme .preview-theme {
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 #typography .mainWord {
