--- a/site/public/scss/style.scss
+++ b/site/public/scss/style.scss
@@ -43,6 +43,35 @@ header.gnb .logo {
     opacity: .8;
   }
 }
+h1 {
+  font-family: Ubuntu;
+}
+
+.error-container {
+  width :100%;
+  height: 100%;
+  background-color: #5178af;
+  position: fixed;
+  top: 0;
+  left: 0;
+  .error-wrapper {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* max-width: 1024px; */
+    /* margin: 0 auto; */
+    text-align: center;
+  }
+  .status {
+    font-size: 25em;
+  }
+  .message {
+    font-size: 8em;
+  }
+}
+
 .main-menu, .sub-menu {
   display: flex;
   align-items: center;
@@ -103,9 +132,10 @@ header.gnb .logo {
 .main-banner {
   text-align: center;
   height: 450px;
+  padding: 12rem 0;
   .title {
     font-family: Ubuntu;
-    padding: 100px 20px 10px ;
+    padding: 10px 20px 10px ;
     font-size: 3em;
     font-weight: 800;
   }
@@ -206,6 +236,30 @@ section {
   }
   .field {
     margin-bottom: 5px;
+  }
+}
+#custom-theme {
+  padding: 150px 40px;
+  .user-custom-theme {
+    h1, p {
+      text-align: center;
+    }
+  }
+  .select-css {
+    .option-item {
+      padding: 10px;
+    }
+  }
+  .hr {
+    margin: 10px;
+    width: 100%;
+    height: 1px;
+    background-color: #d6d6d6;
+  }
+  .preview-theme {
+    display: inline-flex;
+    flex-wrap: wrap;
+    gap: 10px;
   }
 }
 #typography {
