--- a/src/definitions/components/badge.scss
+++ b/src/definitions/components/badge.scss
@@ -1,45 +1,47 @@
-.ga-badge {
-  cursor: default;
-  vertical-align: baseline;
-  display: inline-block;
-  font-size: $badgeFontSize;
-  font-weight: $badgeFontWeight;
-  text-align: center;
-  min-width: $badgeSize;
-  min-height: $badgeSize;
-  line-height: 1em;
-  padding: $badgePadding;
-  border-radius: $badgeBorderRadius;
-  background-color: $hoverButtonBg;
-  /*color: #ffffff;*/
-  /*text-shadow: 0 0 2px #909090;*/
-  position: absolute;
-  z-index: 999;
-  top: $badgeOffset * -1;
-  right: $badgeOffset * -1;
-  &.shadow {
-    box-shadow: $badgeShadow;
-  }
-  &.mark {
-    min-width: 5px;
-    min-height: 5px;
-    padding: 0;
-    top: 1px;
-    right: 1px;
-  }
-  &.align {
-    &-left {
-      left: $badgeOffsetLeft;
-      right: auto;
+.#{$ns} {
+  &-badge {
+    cursor: default;
+    vertical-align: baseline;
+    display: inline-block;
+    font-size: $badgeFontSize;
+    font-weight: $badgeFontWeight;
+    text-align: center;
+    min-width: $badgeSize;
+    min-height: $badgeSize;
+    line-height: 1em;
+    padding: $badgePadding;
+    border-radius: $badgeBorderRadius;
+    background-color: $hoverButtonBg;
+    /*color: #ffffff;*/
+    /*text-shadow: 0 0 2px #909090;*/
+    position: absolute;
+    z-index: 999;
+    top: $badgeOffset * -1;
+    right: $badgeOffset * -1;
+    &.shadow {
+      box-shadow: $badgeShadow;
     }
-    &-center {
-      left: 100%;
-      right: auto;
-      transform: translate(-50%, 0);
+    &.mark {
+      min-width: 5px;
+      min-height: 5px;
+      padding: 0;
+      top: 1px;
+      right: 1px;
     }
-    &-right {
-      left: auto;
-      right: $badgeOffset * -1;
+    &.align {
+      &-left {
+        left: $badgeOffsetLeft;
+        right: auto;
+      }
+      &-center {
+        left: 100%;
+        right: auto;
+        transform: translate(-50%, 0);
+      }
+      &-right {
+        left: auto;
+        right: $badgeOffset * -1;
+      }
     }
   }
 }
@@ -48,7 +50,7 @@
   $bgColor: #{nth($values, 1)};
   $hoverColor: #{nth($values, 2)};
   $textColor: #{nth($values, 3)};
-  .ga-badge {
+  .#{$ns}-badge {
     &.#{$color} {
       background-color: $hoverColor;
       color: $textColor;
@@ -58,8 +60,8 @@
 
 @each $color, $value in $colors {
   $hoverColor: darken($value, 10);
-  $textColor: #white;
-  .ga-badge {
+  $textColor: $white;
+  .#{$ns}-badge {
     &.#{$color} {
       background-color: $value;
       color: $white;
