--- a/src/themes/default/bases/variables.scss
+++ b/src/themes/default/bases/variables.scss
@@ -9,6 +9,8 @@
     @return calc($number/14)*1rem
 };
 
+$ns: 'ga';
+
 $grays: (
     "gray-0": #ffffff,
     "gray-5": #f2f2f2,
@@ -165,23 +167,25 @@ $colors: (
 );
 
 $colors2: (
-        'red': #D93B3B,
-        'sunset': #D44D32,
-        'orange': #D95B2C,
-        'amber': #D3873F,
-        'yellow': #F5B54D,
-        'citron': #CAC747,
-        'lime': #85AB39,
-        'green': #48992F,
-        'mint': #3A874F,
-        'teal': #449698,
-        'cyan': #4D9BCC,
-        'blue': #4E7AF8,
-        'indigo': #5642ED,
-        'purple': #8756F3,
-        'pink': #BF3DA0,
-        'rose': #BB3A62,
+    'red': #D93B3B,
+    'sunset': #D44D32,
+    'orange': #D95B2C,
+    'amber': #D3873F,
+    'yellow': #F5B54D,
+    'citron': #CAC747,
+    'lime': #85AB39,
+    'green': #48992F,
+    'mint': #3A874F,
+    'teal': #449698,
+    'cyan': #4D9BCC,
+    'blue': #4E7AF8,
+    'indigo': #5642ED,
+    'purple': #8756F3,
+    'pink': #BF3DA0,
+    'rose': #BB3A62,
 );
+
+
 
 //
 //heading
