--- a/src/themes/gcloud/bases/variables.scss
+++ b/src/themes/gcloud/bases/variables.scss
@@ -1,35 +1,63 @@
+@use 'sass:map';
+@use 'sass:math';
+
+@use './colors.scss' as *;
+
 @function relativePx($number) {
-    @return ($number/14)*1em
+    @return calc($number/14)*1em
 };
 
 @function absolutePx($number) {
-    @return ($number/14)*1rem
+    @return calc($number/14)*1rem
 };
 
+// namespace
 
-$white: #ffffff;
-$black: #333333;
+$ns: 'ga';
+
+$grays: (
+    "gray-0": #ffffff,
+    "gray-5": #f2f2f2,
+    "gray-10": #e9e9e9,
+    "gray-15": #dfdfdf,
+    "gray-20": #cccccc,
+    "gray-30": #b9b9b9,
+    "gray-40": #a6a6a6,
+    "gray-50": #939393,
+    "gray-60": #808080,
+    "gray-70": #6c6c6c,
+    "gray-80": #595959,
+    "gray-85": #464646,
+    "gray-90": #3d3d3d,
+    "gray-95": #333333,
+    "gray-100": #000000,
+);
+$white: map.get($grays, 'gray-0');
+$black: map.get($grays, 'gray-95');
+
 //
 //font family
 //
-$fontName: 'Spoqa Han Sans';
-$fontNameKr: '';
+$fontName: 'Ubuntu';
 $fontSmoothing: antialiased;
 $baseFontColor: $black;
-
-
-
-
+$dModeBaseFontColor: $white;
+//
 //font weight
-$light: 100;
+//
+$light: 300;
 $regular: 400;
 $bold: 600;
 $bolder: 800;
 
+//
 //line height
-$lineHeight: relativePx(20);
+//
+$lineHeight: calc(18 / 14);
 
+//
 //letter spacing
+//
 $widerSpacing: 1px;
 $wideSpacing: 0.5px;
 $baseSpacing: normal;
@@ -39,28 +67,39 @@ $narrowerSpacing: -1px;
 //
 //border color
 //
-$borderColor: #D6D6D6;
+$borderColor:  map.get($grays, 'gray-15');;
 $borderDarkColor: darken($borderColor, 27.4);
 
 //
 //base background color
 //
 $background: #FFFFFF;
+$dModeBackground: #333333;
 
 //#definitions
-//$primary: #454545;
-//$secondary: #EBEBEB;
 
-$primary: #0076D5;
-$secondary: #888888;
+//
+// colors
+//
 
+$primary: #5178af;
+$secondary: #35363a;
+
+$success: #528E64;
 $info: #909090;
-$danger: #D53012;
+$danger: #D50000;
 $attention: #EC6E00;
 $importance: #FDC036;
 
+$lightSuccess: #CBE1D2;
+$lightInfo: #D4E9ED;
+$lightDanger: #FBE0DA;
+$lightAttention: #FFE9D6;
+$lightImportance: #FFF3D7;
+
 $primaryText: $white;
 $secondaryText: $white;
+
 $infoText: $white;
 $dangerText: $white;
 $attentionText: $white;
@@ -69,24 +108,22 @@ $importanceText: $white;
 $surface: #f2f2f2;
 $surfaceHover: #F4F4F4;
 
-$black: #333333;
 $gray: #909090;
-$lightGray: lighten($gray, 16.1); //#C4C4C4
-$darkGray: lighten($black, 20.4); //#676767
+$lightGray: lighten($gray, 16.1);
+$darkGray: lighten($black, 20.4);
 
-//$darkPrimary: darken(saturate($primary, 23.9), 10.6); //#056AC93
-//$darkSecondary: darken($secondary, 35.7); //#909090
-//$darkerPrimary: darken(saturate($primary, 28.8), 20.8); //#004F9A
-//$darkerSecondary: darken($secondary, 58.1); //#575757
+$darkPrimary: darken(saturate($primary, 0), 10.6);
+$darkSecondary: darken($secondary, 35.7);
+$darkerPrimary: darken(saturate($primary, 0), 20.8);
+$darkerSecondary: darken($secondary, 58.1);
 
-$darkPrimary: lighten(saturate($primary, 23.9), 10.6);
-$darkSecondary: lighten($secondary, 35.7);
-$darkerPrimary: lighten(saturate($primary, 28.8), 20.8);
-$darkerSecondary: lighten($secondary, 58.1);
+$lightPrimary: lighten($primary, 35);
+$lightSecondary: lighten($secondary, 35);
 
 $surface1: #F8F8F8;
 $surface2: #EFF4FC;
 $surface3: #DAE8F8;
+
 
 $redColor: #D75757;
 $orangeColor: #EE9033;
@@ -102,52 +139,75 @@ $brownColor: #A86A82;
 $grayColor: #8B8B8B;
 
 $brandColors: (
-        'primary': ($primary, $primary, $primaryText),
-        'secondary': ($secondary,$secondary, $secondaryText),
+        'primary': ($primary, $darkPrimary, $primaryText),
+        'secondary': ($secondary, $darkSecondary, $secondaryText),
 );
 
 $stateColors: (
-        'success': ($greenColor, darken($greenColor, 10), $white),
-        'info': ($info, darken($info, 10), $infoText),
-        'danger': ($danger, darken($danger, 10), $dangerText),
-        'attention': ($attention, darken($attention, 10), $attentionText),
-        'importance': ($importance, darken($importance, 10), $importanceText),
+    'success': ($success, darken($greenColor, 10), $white, $lightSuccess),
+    'info': ($info, darken($info, 10), $infoText, $lightInfo),
+    'danger': ($danger, darken($danger, 10), $dangerText, $lightDanger),
+    'attention': ($attention, darken($attention, 10), $attentionText, $lightAttention),
+    'importance': ($importance, darken($importance, 10), $importanceText, $lightImportance),
 );
+
+@function grayHsl($per) {
+    @return hsl(0, 0, $per) 
+}
 
 $colors: (
-        'red': $redColor,
-        'orange': $orangeColor,
-        'yellow': $yellowColor,
-        'lightgreen': $lightgreenColor,
-        'green': $greenColor,
-        'lightblue': $lightblueColor,
-        'blue': $blueColor,
-        'deepblue': $deepblueColor,
-        'deeppurple': $deeppurpleColor,
-        'purple': $purpleColor,
-        'brown': $brownColor,
-        'gray': $grayColor,
+    'red': map.get($red-palette, 500),
+    'orange': map.get($orange-palette, 400),
+    'yellow': map.get($yellow-palette, 200),
+    'lightgreen': map.get($lightgreen-palette, 200),
+    'green': map.get($green-palette, 400),
+    'lightblue': map.get($lightblue-palette, 300),
+    'blue': map.get($blue-palette, 400),
+    'deepblue': map.get($deepblue-palette, 500),
+    'deeppurple': map.get($deeppurple-palette, 500),
+    'purple': map.get($purple-palette, 400),
+    'brown': map.get($brown-palette, 500),
+    'gray': map.get($gray-palette, 500),
 );
-
 $colors2: (
-    'red': #D93B3B,
-    'sunset': #D44D32,
-    'orange': #D95B2C,
-    'amber': #D3873F,
-    'yellow': #F5B54D,
-    'citron': #CAC747,
-    'lime': #85AB39,
-    'green': #48992F,
-    'mint': #3A874F,
-    'teal': #449698,
-    'cyan': #4D9BCC,
-    'blue': #4E7AF8,
-    'indigo': #5642ED,
-    'purple': #8756F3,
-    'pink': #BF3DA0,
-    'rose': #BB3A62,
+        'red': #D93B3B,
+        'sunset': #D44D32,
+        'orange': #D95B2C,
+        'amber': #D3873F,
+        'yellow': #F5B54D,
+        'citron': #CAC747,
+        'lime': #85AB39,
+        'green': #48992F,
+        'mint': #3A874F,
+        'teal': #449698,
+        'cyan': #4D9BCC,
+        'blue': #4E7AF8,
+        'indigo': #5642ED,
+        'purple': #8756F3,
+        'pink': #BF3DA0,
+        'rose': #BB3A62,
 );
 
+$light-level: 50;
+$colors-light: (
+    'red': map.get($red-palette, $light-level),
+    'orange': map.get($orange-palette, $light-level),
+    'yellow': map.get($yellow-palette, $light-level),
+    'lightgreen': map.get($lightgreen-palette, $light-level),
+    'green': map.get($green-palette, $light-level),
+    'lightblue': map.get($lightblue-palette, $light-level),
+    'blue': map.get($blue-palette, $light-level),
+    'deepblue': map.get($deepblue-palette, $light-level),
+    'deeppurple': map.get($deeppurple-palette, $light-level),
+    'purple': map.get($purple-palette, $light-level),
+    'brown': map.get($brown-palette, $light-level),
+    'gray': map.get($gray-palette, $light-level),
+);
+
+@debug $colors-light;
+//
+//heading
+//
 $headerFontWeight: $bold;
 $h1: absolutePx(22);
 $h2: absolutePx(20);
@@ -156,20 +216,12 @@ $h4: absolutePx(16);
 $h5: absolutePx(14);
 
 //Size
-$tinySize: (10 / 14);
-$smallSize: (12 / 14);
-$mediumSize: (14 / 14);
-$largeSize: (18 / 14);
-$hugeSize: (20 / 14);
-$massiveSize: (24 / 14);
-
-//$tiny-size: 0.5em;
-//$small-size: 0.75em;
-//$normal-size: 1em;
-//$large-size: 1.25em;
-//$huge-size: 1.5em;
-
-
+$tinySize: calc(10 / 14);
+$smallSize: calc(12 / 14);
+$mediumSize: calc(14 / 14);
+$largeSize: calc(18 / 14);
+$hugeSize: calc(20 / 14);
+$massiveSize: calc(24 / 14);
 
 // Scroll Bars
 
@@ -201,43 +253,46 @@ $thumbInvertedBackground: rgba(255, 255, 255, 0.25);
 $thumbInvertedInactiveBackground: rgba(255, 255, 255, 0.15);
 $thumbInvertedHoverBackground: rgba(255, 255, 255, 0.35);
 
-$baseBorderRadius: 2em;
+$baseBorderRadius: relativePx(2);
 //$baseBorderRadius: 2em;
-$baseInputRadius: relativePx(2);
+$baseInputRadius: $baseBorderRadius;
 
 // button & input
 $baseButtonColor: $black;
 $baseButtonBg: #efefef;
 
-$horizontalInputPadding: relativePx(15);
-$verticalInputPadding: relativePx(9);
-$horizontalPadding: $horizontalInputPadding + ($horizontalInputPadding * 0.5);
+$horizontalInputPadding: relativePx(12);
+$verticalInputPadding: relativePx(8);
+// $horizontalPadding: $horizontalInputPadding + ($horizontalInputPadding * 0.5);
+$horizontalPadding: $horizontalInputPadding;
 $verticalPadding: $verticalInputPadding;
 
 $buttonPadding: $verticalPadding $horizontalPadding $verticalPadding;
 
 // button-compact
-$compactHorizontalPadding: relativePx(9);
-$compactVerticalPadding: relativePx(5);
+$compactHorizontalPadding: $horizontalPadding * 0.5;
+$compactVerticalPadding: $verticalInputPadding * 0.5;
 
-$compactPadding: $compactVerticalPadding $compactVerticalPadding;
+$compactPadding: $compactVerticalPadding $compactHorizontalPadding;
 
 //Button + Equal
 
 $equalBtnWidth: 150px;
-$equalBtnPadding: 12px 20px;
+$equalBtnPadding: 11px 20px;
 
 $equalLargeBtnWidth: 200px;
 $equalLargeBtnPadding: 18px 30px;
 
 //input base
 $inputLineHeight: relativePx(17);
-$lineHeightOffset:(( $inputLineHeight - 1) * 0.5);
+$lineHeightOffset:(( $inputLineHeight - 1em) * 0.5);
+//$inputLineHeight: 17 / 14;
+//$lineHeightOffset:(( $inputLineHeight - 1) * 0.5) * 14;
 
-$inputVerticalOffsetPadding: $verticalInputPadding - $lineHeightOffset;
+$inputVerticalOffsetPadding: calc($verticalInputPadding - $lineHeightOffset - 1px);
 
+//$inputPadding: $inputVerticalOffsetPadding+px $horizontalInputPadding+px;
 $inputPadding: $inputVerticalOffsetPadding $horizontalInputPadding;
-
 // Grid system
 
 $gridWhole: 12;
@@ -247,27 +302,33 @@ $gridWholeMobile: 4;
 $gridWholeTablet: 8;
 $gridWholeLaptop: 12;
 
-$gridPercent: (100 / $gridWhole);
-$gridHalf: $gridWhole * 0.5;
-$gridThird: $gridWhole / 3;
-$gridQuarter: $gridWhole / 4;
-$gridFifth: $gridWhole / 5;
-$gridSixth: $gridWhole / 6;
-$gridEighth: $gridWhole / 8;
-$gridTenth: $gridWhole / 10;
+$gridPercent: calc(100 / $gridWhole);
+$gridHalf: calc($gridWhole * 0.5);
+$gridThird: calc($gridWhole / 3);
+$gridQuarter: calc($gridWhole / 4);
+$gridFifth: calc($gridWhole / 5);
+$gridSixth: calc($gridWhole / 6);
+$gridEighth: calc($gridWhole / 8);
+$gridTenth: calc($gridWhole / 10);
 
 $bp-mobile: 320px;
 $bp-tablet: 768px;
 $bp-laptop: 1280px;
 $bp-desktop: 1440px;
 
+
 //Dark Mode
-$dModeBaseFontColor: $white;
-$dModeBorderColor: #494F61;
-$dModeBackground: #31363e;
+//$dModeBaseFontColor: $white;
+//$dModeBorderColor: #494F61;
+//$dModeBackground: #31363e;
+//
+//$dModeSurface: #272C34;
 
-$dModeSurface: #272C34;
-
-
-
-
+//breakpoint
+$breakpoints: (
+    xs: 0, //mobile-portrait
+    sm: 576px, //mobile-landscape
+    md: 768px, //tablet
+    lg: 992px, //desktop
+    xl: 1200px, //desktop-large
+) !default;
